refactor: ReadProductResponse.java fromEntity 코드 리팩토링